--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.71.10",
+    "react-native-animatable": "^1.3.3",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-paper": "^5.8.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.21.0",
+    "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^9.2.0",
     "react-query": "^3.39.3"
   },
